# lagari_v

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mav.parm  mav.tlog  mav.tlog.raw
cmake/: Dependencies.cmake  Platform.cmake
config/: default.yaml  gazebo.yaml  isaac_sim.yaml  test.yaml
include/lagari/capture/: argus_capture.hpp  capture.hpp  gstreamer_capture.hpp  isaac_capture.hpp  isaac_shm_capture.hpp  libcamera_capture.hpp  sim_capture.hpp  v4l2_capture.hpp
include/lagari/comms/: mavlink_interface.hpp  telemetry.hpp
include/lagari/core/: config.hpp  logger.hpp  module.hpp  profiler.hpp  ring_buffer.hpp  spsc_queue.hpp  system_state.hpp  types.hpp
include/lagari/detection/: detector.hpp  ncnn_detector.hpp  onnxruntime_detector.hpp  openvino_detector.hpp  tensorrt_detector.hpp  yolo_processor.hpp
include/lagari/display/: display.hpp  gstreamer_display.hpp
include/lagari/guidance/: guidance.hpp
include/lagari/qr/: qr_decoder.hpp
include/lagari/recording/: ffmpeg_recorder.hpp  gstreamer_recorder.hpp  opencv_recorder.hpp  overlay_renderer.hpp  recorder.hpp
models/: avci.names  coco.names
scripts/gazebo/: gnome_sims.sh  xfce_sims.sh
scripts/isaac_sim/: README.md  create_uav_scene.py  lagari_camera_extension.py  lagari_camera_standalone.py  lagari_shm_streamer.py
scripts/model_conversion/: README.md  convert_model.py  download_models.py
src/: main.cpp
src/capture/: argus_capture.cpp  capture_factory.cpp  gstreamer_capture.cpp  isaac_capture.cpp  isaac_shm_capture.cpp  libcamera_capture.cpp  sim_capture.cpp  v4l2_capture.cpp
src/comms/: mavlink_interface.cpp  serial_transport.cpp  telemetry.cpp  udp_transport.cpp
src/core/: config.cpp  logger.cpp  profiler.cpp  system_state.cpp
src/detection/: detector_factory.cpp  ncnn_detector.cpp  onnxruntime_detector.cpp  openvino_detector.cpp  tensorrt_detector.cpp  yolo_processor.cpp
src/display/: display_factory.cpp  gstreamer_display.cpp
src/guidance/: guidance.cpp  tracker.cpp
src/qr/: qr_decoder.cpp
src/recording/: ffmpeg_recorder.cpp  gstreamer_recorder.cpp  opencv_recorder.cpp  overlay_renderer.cpp  recorder.cpp
tests/: CMakeLists.txt
tests/unit/: test_capture.cpp  test_config.cpp  test_pid_controller.cpp  test_ring_buffer.cpp  test_spsc_queue.cpp  test_types.cpp
